[gd_scene load_steps=18 format=3 uid="uid://bsge5qtmtgeqp"]

[ext_resource type="PackedScene" uid="uid://ddiha2u3vtvio" path="res://prefabs/pot.tscn" id="1_c0c68"]
[ext_resource type="Script" path="res://scripts/manager.gd" id="1_f4ycd"]
[ext_resource type="PackedScene" uid="uid://cqbf2y6nhwg7c" path="res://prefabs/player.tscn" id="1_xlphq"]
[ext_resource type="Script" path="res://scripts/ingredient_table.gd" id="2_i2qm7"]
[ext_resource type="Resource" uid="uid://cjyo80ax6drxa" path="res://ingredients/meat.tres" id="3_hxumr"]
[ext_resource type="Resource" uid="uid://cgkms73isshce" path="res://ingredients/spice.tres" id="4_j7ncp"]
[ext_resource type="Resource" uid="uid://c0wfrh56s7y20" path="res://ingredients/rice.tres" id="5_nk6uk"]
[ext_resource type="Resource" uid="uid://cwo1lx1707wmc" path="res://ingredients/bombay_morich.tres" id="7_gq7pb"]
[ext_resource type="Resource" uid="uid://d3kyoeq30qumd" path="res://ingredients/capsicum.tres" id="8_71v2x"]
[ext_resource type="PackedScene" uid="uid://bidorsyujnfjp" path="res://prefabs/bin.tscn" id="8_efiyb"]
[ext_resource type="PackedScene" uid="uid://dc4tpqo3jmxc1" path="res://prefabs/table.tscn" id="9_gsfln"]
[ext_resource type="PackedScene" uid="uid://5whx3uiu5mx3" path="res://prefabs/fan.tscn" id="12_mu1qa"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_i37kf"]
vertices = PackedVector2Array(1138, 632, 11, 632, 11, 11, 1139, 11)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(1150, 2, 1148, 642, 1148, 642, 2, 643, 2, 643, 1.03984, 26.5782, 1, 1, 1, 1)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x3oct"]
size = Vector2(657.5, 95)

[sub_resource type="Gradient" id="Gradient_f2kyo"]
offsets = PackedFloat32Array(0, 0.987013, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.331169, 0.331169, 0.331169, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_cynkk"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_203bm"]
color_ramp = SubResource("Gradient_f2kyo")
noise = SubResource("FastNoiseLite_cynkk")

[node name="World" type="Node2D"]
script = ExtResource("1_f4ycd")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
navigation_polygon = SubResource("NavigationPolygon_i37kf")

[node name="cooking_table" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cooking_table"]
visible = false
position = Vector2(1100, 325)
shape = SubResource("RectangleShape2D_x3oct")

[node name="ColorRect" type="ColorRect" parent="cooking_table"]
offset_left = 1057.0
offset_top = 11.0
offset_right = 1138.0
offset_bottom = 634.0
color = Color(0.81, 0.8019, 0.8019, 1)

[node name="pot1" parent="cooking_table" instance=ExtResource("1_c0c68")]
position = Vector2(1100, 208)
pot_name = "1"

[node name="pot2" parent="cooking_table" instance=ExtResource("1_c0c68")]
position = Vector2(1099, 332)
pot_name = "2"

[node name="pot3" parent="cooking_table" instance=ExtResource("1_c0c68")]
position = Vector2(1100, 456)
pot_name = "3"

[node name="ingredient_table" type="StaticBody2D" parent="." node_paths=PackedStringArray("ing_markers")]
script = ExtResource("2_i2qm7")
ing_markers = [NodePath("pos_markers/0"), NodePath("pos_markers/1"), NodePath("pos_markers/2"), NodePath("pos_markers/3"), NodePath("pos_markers/4"), NodePath("pos_markers/5"), NodePath("pos_markers/6")]
ing_resources = Array[Resource("res://scripts/ing_res.gd")]([ExtResource("3_hxumr"), ExtResource("5_nk6uk"), ExtResource("4_j7ncp"), ExtResource("7_gq7pb"), ExtResource("8_71v2x")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="ingredient_table"]
position = Vector2(727.25, 52.5)
shape = SubResource("RectangleShape2D_x3oct")

[node name="Sprite2D" type="Sprite2D" parent="ingredient_table"]
position = Vector2(730, 53)
scale = Vector2(1.25803, 0.165039)
texture = SubResource("NoiseTexture2D_203bm")

[node name="pos_markers" type="Node2D" parent="ingredient_table"]

[node name="0" type="Marker2D" parent="ingredient_table/pos_markers"]
position = Vector2(457, 52)

[node name="1" type="Marker2D" parent="ingredient_table/pos_markers"]
position = Vector2(544, 53)

[node name="2" type="Marker2D" parent="ingredient_table/pos_markers"]
position = Vector2(631, 52)

[node name="3" type="Marker2D" parent="ingredient_table/pos_markers"]
position = Vector2(718, 52)

[node name="4" type="Marker2D" parent="ingredient_table/pos_markers"]
position = Vector2(806, 51)

[node name="5" type="Marker2D" parent="ingredient_table/pos_markers"]
position = Vector2(885, 49)

[node name="6" type="Marker2D" parent="ingredient_table/pos_markers"]
position = Vector2(963, 49)

[node name="IngredientsRegenerateTimer" type="Timer" parent="ingredient_table"]
wait_time = 2.0
autostart = true

[node name="Player" parent="." instance=ExtResource("1_xlphq")]
position = Vector2(323, 75)

[node name="bin" parent="." instance=ExtResource("8_efiyb")]
position = Vector2(704, 595)

[node name="table" parent="." instance=ExtResource("9_gsfln")]
position = Vector2(121, 234)

[node name="Hud" type="Node2D" parent="."]

[node name="ScoreLabel" type="Label" parent="Hud"]
offset_left = 37.0
offset_top = 37.0
offset_right = 89.0
offset_bottom = 60.0
text = "Score: "

[node name="ScoreContainer" type="Label" parent="Hud"]
offset_left = 88.0
offset_top = 37.0
offset_right = 140.0
offset_bottom = 60.0

[node name="Fan" parent="." instance=ExtResource("12_mu1qa")]
position = Vector2(782, 595)

[node name="Fan2" parent="." instance=ExtResource("12_mu1qa")]
position = Vector2(867, 597)

[node name="Fan3" parent="." instance=ExtResource("12_mu1qa")]
position = Vector2(950, 595)

[connection signal="area_entered" from="cooking_table/pot1" to="." method="_on_pot_area_entered"]
[connection signal="selected" from="cooking_table/pot1" to="." method="_on_pot_selected"]
[connection signal="area_entered" from="cooking_table/pot2" to="." method="_on_pot_area_entered"]
[connection signal="selected" from="cooking_table/pot2" to="." method="_on_pot_selected"]
[connection signal="area_entered" from="cooking_table/pot3" to="." method="_on_pot_area_entered"]
[connection signal="selected" from="cooking_table/pot3" to="." method="_on_pot_selected"]
[connection signal="ing_area_entered" from="ingredient_table" to="." method="_on_ingredient_table_ing_area_entered"]
[connection signal="ing_selected" from="ingredient_table" to="." method="_on_ingredient_table_ing_selected"]
[connection signal="timeout" from="ingredient_table/IngredientsRegenerateTimer" to="ingredient_table" method="_on_ingredients_regenerate_timer_timeout"]
[connection signal="entered_area" from="bin" to="." method="_on_bin_entered_area"]
[connection signal="selected_bin" from="bin" to="." method="_on_bin_selected_bin"]
[connection signal="area_entered" from="table" to="." method="_on_table_area_entered"]
[connection signal="score_obtained" from="table" to="." method="_on_table_score_obtained"]
[connection signal="selected" from="table" to="." method="_on_table_selected"]
[connection signal="entered_area" from="Fan" to="." method="_on_fan_entered_area"]
[connection signal="selected_fan" from="Fan" to="." method="_on_fan_selected_fan"]
[connection signal="entered_area" from="Fan2" to="." method="_on_fan_entered_area"]
[connection signal="selected_fan" from="Fan2" to="." method="_on_fan_selected_fan"]
[connection signal="entered_area" from="Fan3" to="." method="_on_fan_entered_area"]
[connection signal="selected_fan" from="Fan3" to="." method="_on_fan_selected_fan"]
